add guard page allocator