@@ -44,9 +44,11 @@ import static org.elasticsearch.gradle.internal.util.ParamsUtils.loadBuildParams
  * a no-op.
  *
  * <p> Works by patching {@code java.base} at compile time with a stub JAR whose
- * {@code java.lang.foreign} classes have the {@code @PreviewFeature} annotation stripped. Also
- * enables forbidden-API checking for renamed preview APIs, so that direct usage of methods like
- * {@code getUtf8String} or {@code allocateUtf8String} is caught at build time.
+ * {@code java.lang.foreign} classes have the {@code @PreviewFeature} annotation stripped, along with
+ * selected classes outside that package that expose preview methods referencing FFM types (for example
+ * {@code FileChannel.map(MapMode, long, long, Arena)}). Also enables forbidden-API checking for renamed
+ * preview APIs, so that direct usage of methods like {@code getUtf8String} or
+ * {@code allocateUtf8String} is caught at build time.
  *
  * <p> Apply in a project's {@code build.gradle}:
  * <pre>{@code
